--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -13,18 +13,18 @@
             </div>
             <div class="col-12 col-lg-6 wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
                 <div class="section-text">
-                    <div class="section-header wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
-                        <h6 class="subtitle wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">Welcome To
+                    <div class="section-header">
+                        <h6 class="subtitle">Welcome To
                             Velora</h6>
-                        <h3 class="title wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
+                        <h3 class="title">
                             Digital Online Academy: Your Path to <span class="text-main">Creative Excellence</span>
                         </h3>
                     </div>
                     <div class="section-content position-relative">
-                        <p class="wow animate__animated animate__fadeInUp" data-wow-delay="0.8s">
+                        <p>
                             Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.
                         </p>
-                        <ul class="wow animate__animated animate__fadeInUp" data-wow-delay="1s">
+                        <ul>
                             <li>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
                                     <path fill="currentColor"
@@ -55,9 +55,7 @@
                             </li>
                         </ul>
 
-                        <a href="html/course-1.html"
-                            class="button button-lg button-outline-dark mt-4 wow animate__animated animate__fadeInUp"
-                            data-wow-delay="1.2s">
+                        <a href="html/course-1.html" class="button button-lg button-outline-dark mt-4">
                             Discover More
                             <i class='bx bx-right-arrow-alt ms-1'></i>
                         </a>
