--- a/src/html/sections/section-choose-us.html
+++ b/src/html/sections/section-choose-us.html
@@ -1,20 +1,18 @@
-<section class="section choose-us wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
+<section class="section choose-us wow animate__animated animate__fadeInUp" data-wow-delay="0.1s" data-wow-duration="1s">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-5 wow animate__animated animate__fadeInUp" data-wow-delay="0.3s"
+            <div class="col-12 col-lg-5 wow animate__animated animate__fadeInUp" data-wow-delay="0.2s"
                 data-wow-duration="1s">
                 <div class="section-text">
-                    <div class="section-header wow animate__animated animate__fadeInUp" data-wow-delay="0.4s"
-                        data-wow-duration="1s">
+                    <div class="section-header">
                         <h6 class="subtitle">Why Choose Us</h6>
                         <h3 class="title mb-3">Transform Your Best Practice with Our <span class="text-main">Online
                                 Course</span></h3>
                     </div>
-                    <div class="section-content wow animate__animated animate__fadeInUp" data-wow-delay="0.5s"
-                        data-wow-duration="1s">
+                    <div class="section-content">
                         <p class="mb-5">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia
                             deserunt mollit. Excepteur sint occaecat.</p>
-                        <div class="choose-feature-item wow animate__animated animate__fadeInUp" data-wow-delay="0.6s"
+                        <div class="choose-feature-item wow animate__animated animate__fadeInUp" data-wow-delay="0.3s"
                             data-wow-duration="1s">
                             <div class="icon bg-soft-amber">
                                 <!-- SVG icon here -->
@@ -25,7 +23,7 @@
                                     a for that an deserunt mollit.</p>
                             </div>
                         </div>
-                        <div class="choose-feature-item wow animate__animated animate__fadeInUp" data-wow-delay="0.7s"
+                        <div class="choose-feature-item wow animate__animated animate__fadeInUp" data-wow-delay="0.4s"
                             data-wow-duration="1s">
                             <div class="icon bg-soft-purple">
                                 <!-- SVG icon here -->
@@ -36,7 +34,7 @@
                                     a for that an deserunt mollit.</p>
                             </div>
                         </div>
-                        <div class="choose-feature-item wow animate__animated animate__fadeInUp" data-wow-delay="0.8s"
+                        <div class="choose-feature-item wow animate__animated animate__fadeInUp" data-wow-delay="0.5s"
                             data-wow-duration="1s">
                             <div class="icon bg-soft-red">
                                 <!-- SVG icon here -->
@@ -51,7 +49,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-lg-6 offset-lg-1 wow animate__animated animate__fadeInUp" data-wow-delay="0.9s"
+            <div class="col-12 col-lg-6 offset-lg-1 wow animate__animated animate__fadeInUp" data-wow-delay="0.6s"
                 data-wow-duration="1s">
                 <div class="section-image text-start">
                     <img src="assets/images/home/choose-img.png" data-speed="4" class="parallax-effect" alt="Image">
