--- a/src/html/sections/section-statistics.html
+++ b/src/html/sections/section-statistics.html
@@ -1,18 +1,19 @@
-<section class="section statistics wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
+<section class="section statistics wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
     <div class="container">
         <div class="stats-box">
             <div class="row">
-                <div class="col-12 col-lg-6 d-none d-lg-block">
+                <div class="col-12 col-lg-6 d-none d-lg-block wow animate__animated animate__fadeInUp"
+                    data-wow-delay="0.2s">
                     <div class="section-image">
                         <img src="assets/images/home/stats-img.png" alt="Image">
                     </div>
                 </div>
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
                     <div class="section-text">
                         <div class="row">
                             <div class="col-12 col-lg-6">
-                                <div class="stats-item">
-                                    <h6><span class="odometer" data-value="5,624">0</span>+</h6>
+                                <div class="stats-item>
+                                    <h6><span class=" odometer" data-value="5,624">0</span>+</h6>
                                     <span>Student Enrolled</span>
                                 </div>
                             </div>
